--- a/index.html
+++ b/index.html
@@ -56,19 +56,7 @@
         <span class="close-cart"><i class="fas fa-window-close"></i></span>
         <h2>your cart</h2>
         <div class="cart-content">
-          <div class="cart-item">
-            <img src="./images/product-1.jpeg" alt="product" />
-            <div>
-              <h4>queen bed</h4>
-              <h5>$20.50</h5>
-              <span class="remove-item">remove</span>
-            </div>
-            <div>
-              <i class="fas fa-chevron-up"></i>
-              <p class="item-amount">1</p>
-              <i class="fas fa-chevron-down"></i>
-            </div>
-          </div>
+          <!--cart item-->
         </div>
         <div class="cart-footer">
           <h3>your total : $ <span class="cart-total">0</span></h3>
